--- a/_studies/2021-01-27_10.18087_cardio.2020.11.n1440.md
+++ b/_studies/2021-01-27_10.18087_cardio.2020.11.n1440.md
@@ -11,7 +11,7 @@ de:
   subtitle:    'Ergebnisse der offenen, nicht-randomisierten klinischen Vergleichsstudie: "Bromhexin und Spironolacton bei hospizpflichtiger Coronavirus-Infektion (BISCUIT)"'
   description: 'Ziel dieser Studie war, die Wirksamkeit und Sicherheit einer Kombination aus Bromhexin in einer Dosis von 8 mg viermal täglich und Spironolacton 50 mg pro Tag bei Patienten mit leichter und mittelschwerer COVID 19 zu bewerten.Material und Methoden Es handelte sich um eine offene, prospektive, vergleichende, nicht-randomisierte Studie. 103 Patienten wurden eingeschlossen (33 in der Bromhexin- und Spironolacton-Gruppe und 70 in der Kontrollgruppe). Alle Patienten hatten eine bestätigte 2019 neuartige Coronavirus-Infektion (COVID 19) auf der Grundlage einer positiven Polymerase-Kettenreaktion (PCR) für SARS-CoV-2-Virus-RNA und/oder eines typischen Musters einer viralen Lungenentzündung auf der multispiralen Computertomographie. Der Schweregrad der Lungenschädigung wurde auf das Stadium I-II begrenzt, der CRP-Wert sollte 60 mg/dL nicht überschreiten und der SO2-Gehalt der Luft innerhalb von 92-98 % liegen. Ergebnisse Der Rückgang der Werte auf der SHOKS-COVID-Skala, die neben dem klinischen Status auch die Dynamik von CRP (einem Entzündungsmarker), D-Dimer (einem Marker für die Thrombusbildung) und den Grad der Lungenschädigung im CT (primärer Endpunkt) bewertet, war in beiden Gruppen statistisch signifikant, und es wurden keine Unterschiede zwischen ihnen festgestellt. Die Analyse für die Gesamtgruppe ergab eine statistisch signifikante Verringerung der Krankenhausaufenthaltszeit von 10,4 auf 9,0 Tage (um 1,5 Tage) und der Fieberzeit von 6,5 auf 3,9 Tage (um 2,5 Tage). Angesichts der unvollständigen Ausgewogenheit der Gruppen umfasste die Hauptanalyse 66 Patienten, die mittels Propensity Score Matching angepasst wurden. Bei den gematchten Patienten trat die Temperaturnormalisierung in der Bromhexin/Spironolacton-Gruppe 2 Tage schneller ein als in der Kontrollgruppe. Bei allen Patienten der Bromhexin/Spironolacton-Gruppe wurde bis zum 10. Tag eine Viruseliminierung festgestellt; in der Kontrollgruppe bestand die Virämie bei 23,3 % weiter. Die Zahl der Patienten, die am 10. Tag des Krankenhausaufenthalts oder bei längerem (≥10 Tage) Krankenhausaufenthalt eine positive PCR auf das SARS-CoV-2-Virus hatten, betrug in der Kontrollgruppe 20/21 (95,2 %) und in der Gruppe mit Bromhexin/Spironolacton -14/24 (58,3 %). Das Odds-Ratio für eine positive PCR oder einen Krankenhausaufenthalt von mehr als zehn Tagen lag bei Bromhexin und Spironolacton im Vergleich zur Kontrollgruppe bei 0,07. Die Kombination von Bromhexin mit Spironolacton schien bei der Behandlung einer neuen Coronavirus-Infektion wirksam zu sein, da sie eine schnellere Normalisierung des klinischen Zustands, eine eineinhalbmal schnellere Senkung der Temperatur und eine Verringerung des erklärenden kombinierten Endpunkts, der Viruslast oder der langen Dauer des Krankenhausaufenthalts (≥ 10 Tage), bewirkte.'
   tags: [COVID 19; Spironolacton; Bromhexin; SHOKS-COVID]
-group:       "TheraTreatmentspeutics"
+group:       "Treatments"
 credit:      https://doi.org/10.18087/cardio.2020.11.n1440
 link:       
 ---
