--- a/_studies/2021-04-20_10.3390_ijerph18084344.md
+++ b/_studies/2021-04-20_10.3390_ijerph18084344.md
@@ -2,7 +2,7 @@
 date:        2021-04-20
 title:       International Journal of Environmental Research and Public Health
 authors:      'Kisielinski, K, Giboni, P, Prescher, A. et al.'
-status:       Peer Reviewed
+status:       default
 en:
   subtitle:    'Is a Mask That Covers the Mouth and Nose Free from Undesirable Side Effects in Everyday Use and Free of Potential Hazards?'
   description: 'Many countries introduced the requirement to wear masks in public spaces for containing SARS-CoV-2 making it commonplace in 2020. Up until now, there has been no comprehensive investigation as to the adverse health effects masks can cause. The aim was to find, test, evaluate and compile scientifically proven related side effects of wearing masks. For a quantitative evaluation, 44 mostly experimental studies were referenced, and for a substantive evaluation, 65 publications were found. The literature revealed relevant adverse effects of masks in numerous disciplines. In this paper, we refer to the psychological and physical deterioration as well as multiple symptoms described because of their consistent, recurrent and uniform presentation from different disciplines as a Mask-Induced Exhaustion Syndrome (MIES). We objectified evaluation evidenced changes in respiratory physiology of mask wearers with significant correlation of O2 drop and fatigue (p < 0.05), a clustered co-occurrence of respiratory impairment and O2 drop (67%), N95 mask and CO2 rise (82%), N95 mask and O2 drop (72%), N95 mask and headache (60%), respiratory impairment and temperature rise (88%), but also temperature rise and moisture (100%) under the masks. Extended mask-wearing by the general population could lead to relevant effects and consequences in many medical fields.'
