--- a/_studies/2021-08-21_10.1016_S0262-4079(21)01448-2.md
+++ b/_studies/2021-08-21_10.1016_S0262-4079(21)01448-2.md
@@ -2,7 +2,7 @@
 date:        2021-08-21
 title:       New Scientist 
 authors:     'Thomson, H'
-status:       investigative report
+status:       Report
 en:
   subtitle:  'Herd immunity to covid-19 may not be attainable in the UK. A high vaccination rate will save many lives, but it probably won’t be enough to stop covid-19 becoming a seasonal disease, finds Helen Thomson'
   description: 'THROUGHOUT the covid-19 pandemic, there has been constant reference to the tantalising phenomenon that signals the end: herd immunity. This is when enough people are immune to a virus that it can’t spread, therefore protecting the whole community, even those who aren’t immune. More than 18 months into the pandemic, and with 59 per cent of the UK having received two doses of a covid-19 vaccine, how far is the country from the herd immunity threshold, and how will we know when it has got there? Let’s get the bad news out of the way: it is unlikely to be soon and may not be attainable at all. The good news is that we may not need herd immunity to live alongside the virus. To appreciate why, first we need to understand herd immunity at its simplest: it is the point at which each person with covid-19 infects less than one other susceptible individual. This causes infections to decrease, with only sporadic cases that don’t spread widely.'
