--- a/_studies/2021-12-14_10.1001_jamanetworkopen.2021.37257.md
+++ b/_studies/2021-12-14_10.1001_jamanetworkopen.2021.37257.md
@@ -2,7 +2,7 @@
 date:        2021-12-14
 title:       Infectious Diseases
 authors:      'Qiuyue M, Jue L, Qiao L, et al.'
-status:       Peer Reviewed
+status:       Pdefault
 en:
   subtitle:    'Global Percentage of Asymptomatic SARS-CoV-2 Infections Among the Tested Population and Individuals With Confirmed COVID-19 Diagnosis A Systematic Review and Meta-analysis'
   description: 'Question What is the percentage of asymptomatic individuals with positive test results for SARS-CoV-2 among tested individuals and those with confirmed COVID-19 diagnosis? Findings In this systematic review and meta-analysis of 95 unique studies with 29 776 306 individuals undergoing testing, the pooled percentage of asymptomatic infections was 0.25% among the tested population and 40.50% among the population with confirmed COVID-19. Meaning The high percentage of asymptomatic infections from this study highlights the potential transmission risk of asymptomatic infections in communities.'
