--- a/_studies/2021-12-22_10.1038_s41590-021-01089-8.md
+++ b/_studies/2021-12-22_10.1038_s41590-021-01089-8.md
@@ -10,7 +10,7 @@ authors:      'Dowell, AC, Butler, MS, Jinks, E, et al.'
 ##
 ## Bitte beachtet, daß der Text selbst keine geraden Anführungszeichen (Schreibmaschinensatz) – ' – enthalten darf. Das ist ganz wichtig! Bitte solche Anführungszeichen je nach Bedarf mit typografischen, öffnenden oder schließenden Anführungszeichen – ’ oder ‘ – ersetzen. Das gilt für alle Texte innerhalb gerader Anführungszeichen (authors, subtitle, description).
 ##
-status:       Peer Reviewed
+status:       default
 ## Status der Publikation. Peer Reviewed = default, Preprint, Handout, Investigative Report, Policy Report
 ##
 en:
