--- a/_studies/2021-01-05_10.1111_eci.13484.md
+++ b/_studies/2021-01-05_10.1111_eci.13484.md
@@ -2,7 +2,7 @@
 date:        2021-01-05
 title:       European Journal of Clinical Investigation
 authors:      'Bendavid, E, Oh, C, Bhattacharya, J, Ioannidis, JPA'
-status:       Peer Reviewed
+status:       default
 en:
   subtitle:    'Assessing mandatory stay-at-home and business closure effects on the spread of COVID- 19'
   description: 'The most restrictive nonpharmaceutical interventions (NPIs) for controlling the spread of COVID-19 are mandatory stay-at-home and business closures. Given the consequences of these policies, it is important to assess their effects. We evaluate the effects on epidemic case growth of more restrictive NPIs (mrNPIs), above and beyond those of less-restrictive NPIs (lrNPIs). While small benefits cannot be excluded, we do not find significant benefits on case growth of more restrictive NPIs. Similar reductions in case growth may be achievable with less-restrictive interventions.'
