--- a/_studies/2021-12-24_10.3390_life12010028.md
+++ b/_studies/2021-12-24_10.3390_life12010028.md
@@ -1,7 +1,7 @@
 ---
 date: 2021-12-24
 ##
-title:    life  
+title:    Life  
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors: 'Lipert, A, Musiał, K, Rasmus, P.'
