--- a/_studies/2020-05-11_10.31989_ffhd.v10i5.707.md
+++ b/_studies/2020-05-11_10.31989_ffhd.v10i5.707.md
@@ -5,7 +5,7 @@ date:        2020-05-11
 title:       Functional Foods in Health and Disease
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Haslberger, A, Jacob, U, Hippe B et al.'
+authors:      'Haslberger, A, Jacob, U, Hippe B, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
