--- a/_studies/2021-06-10_10.1007_s10787-021-00826-7.md
+++ b/_studies/2021-06-10_10.1007_s10787-021-00826-7.md
@@ -5,7 +5,7 @@ date:        2021-06-10
 title:       Inflammopharmacology
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Kumar, P, Kumar, M, Bedi, O., et al.'
+authors:      'Kumar, P, Kumar, M, Bedi, O, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 status:     default
 ##
