--- a/_studies/2021-06-14_10.3389_fphar.2021.659577.md
+++ b/_studies/2021-06-14_10.3389_fphar.2021.659577.md
@@ -24,7 +24,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Therapeutische Wirksamkeit und Sicherheit des Repurposing von Arzneimitteln zur Behandlung von COVID-19: Stand der Dinge im Jahr 2021'
+  subtitle:    'Therapeutische Wirksamkeit und Sicherheit des Einsatzes von Arzneimitteln zur Behandlung von COVID-19: Stand der Dinge im Jahr 2021'
 ##
   description: 'COVID-19, übertragen durch SARS-CoV-2, ist eine der schwersten Pandemien in der Geschichte der Menschheit und hat bereits eine große Anzahl von Menschen auf der ganzen Welt infiziert. Diese schrecklich ansteckende Viruserkrankung wurde zuerst in China festgestellt und hat innerhalb kürzester Zeit das weltweite Gesundheitswesen, den Verkehr, die Wirtschaft und die Wissenschaft in Mitleidenschaft gezogen. Obwohl vor kurzem einige Impfstoffe gegen COVID-19 zugelassen wurden, verschlimmern deren Nichtverfügbarkeit und Unzulänglichkeit sowie das Fehlen anderer potenzieller therapeutischer Optionen die Situation weiter, so dass weiterhin wertvolle Menschenleben verloren gehen. In dieser Situation konzentrieren sich Forscher auf der ganzen Welt auf die Wiederverwendung von potenziellen Medikamenten und Prophylaxen wie Favipiravir, Remdesivir, Chloroquin, Hydroxychloroquin, Ivermectin, Lopinavir-Ritonavir, Azithromycin, Doxycyclin, ACEIs/ARBs, Rivaroxaban und Proteaseinhibitoren, die zunächst auf Berichten über pharmakologische und toxikologische In-vitro- und In-vivo-Studien und anschließend auf klinischen Anwendungen beruhten. Auf der Grundlage der verfügbaren vorläufigen Daten aus begrenzten klinischen Studien empfahlen das Nationale Gesundheitsinstitut der USA (NIH) und die USFDA ebenfalls die Wiederverwendung einiger Medikamente, nämlich Hydroxychloroquin, Remdesivir und Favipiravir. Später empfahl die Weltgesundheitsorganisation jedoch, Chloroquin, Hydroxychloroquin, Remdesivir und Lopinavir/Ritonavir bei der Behandlung von COVID-19-Infektionen nicht zu verwenden. Durch die Kombination von Grundkenntnissen über die virale Pathogenese und die Pharmakodynamik von Arzneimittelmolekülen sowie von In-silico-Ansätzen wurden zahlreiche Arzneimittelkandidaten in klinischen Studien untersucht, von denen sich einige als teilweise wirksam gegen COVID-19 erwiesen haben, und viele der anderen Arzneimittel werden derzeit eingehend geprüft. Das Repurposing potenzieller Arzneimittelkandidaten aus verschiedenen Stadien der Evaluierung kann zusammen mit zugelassenen Anti-COVID-19-Impfstoffen eine praktische Quelle für die Behandlung von COVID-19 sein. In diesem Übersichtsartikel wurden Informationen aus abgeschlossenen klinischen Studien, Fallserien, Kohortenstudien, Meta-Analysen und retrospektiven Studien kombiniert, um den aktuellen Stand des Repurposing von Medikamenten im Jahr 2021 zu beleuchten.'
   tags:     [COVID-19, Doxycyclin, Favipiravir, Hydroxychloroquin, Ivermectin, Remdesivir, Repurposing-Medikamente, Rivaroxaban]
