--- a/_studies/2021-06-22_10.2147_IJGM.S317421.md
+++ b/_studies/2021-06-22_10.2147_IJGM.S317421.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Der Zusammenhang zwischen Vitamin D und Infektionen einschließlich COVID-19: Any Hopes?'
+  subtitle:    'Der Zusammenhang zwischen Vitamin D und Infektionen einschließlich COVID-19: besteht Hoffnung?'
   ##
   description: 'Vitamin D wird eine mögliche Rolle bei der Pathogenität, der klinischen Präsentation, der Prognose, den Komplikationen und der Behandlung verschiedener Krankheiten zugeschrieben. Zusätzlich zu seiner bekannten Rolle im Kalziumstoffwechsel reguliert Vitamin D sowohl die angeborene als auch die adaptive Immunität und moduliert in der Folge die antiviralen und antibakteriellen entzündlichen Immunantworten. Angesichts der sich abzeichnenden Coronavirus-Pandemie 2019 (COVID-19) ist die Suche nach potenziellen therapeutischen und schützenden Strategien von dringendem Interesse, und Vitamin D ist einer der vielversprechenden Wirkstoffe in diesem Bereich. In dieser Übersichtsarbeit stellen wir Daten aus der Literatur vor, die die vielversprechende Rolle von Vitamin D bei der Behandlung und/oder Prävention verschiedener Infektionen, einschließlich des schweren akuten respiratorischen Syndroms Coronavirus 2 (SARS-CoV-2), belegen. Diese Übersicht fasst den Vitamin-D-Stoffwechsel und seine Rolle bei Entzündungen, Thrombose und Immunregulation zusammen. Außerdem werden die Rolle von Vitamin D und die Auswirkungen seines Mangels bei verschiedenen Infektionen, nämlich Tuberkulose, Influenza, Humanes Immundefizienz-Virus (HIV) und SARS-CoV-2, kurz dargestellt. In Anbetracht der Rolle von Vitamin D bei der Immunmodulation, der Kontrolle der Thrombose und der Bekämpfung verschiedener Mikroorganismen wird in der vorliegenden Übersichtsarbeit der Zusammenhang zwischen diesen hervorstechenden Funktionen von Vitamin D und der Pathogenität verschiedener Infektionserreger einschließlich COVID-19 näher beleuchtet. Folglich zeigt das umfassende Ergebnis der aktuellen Übersichtsarbeit eine mögliche signifikante Auswirkung der Vitamin-D-Ergänzung als Hoffnung für die Vorbeugung, Behandlung und/oder Verbesserung des Verlaufs bestimmter Infektionen, insbesondere bei den weltweiten Versuchen, die COVID-19-Pandemie zu bekämpfen und die Schwere der damit verbundenen gesundheitlichen Komplikationen zu minimieren. Darüber hinaus ist es von allgemeinem Nutzen, einen Vitamin-D-Mangel zu vermeiden, um dessen positive Auswirkungen auf das Immunsystem und dessen Schutzmechanismus bei Infektionen zu erhalten.'
   tags: [1.25(OH)2D, 1.25-Dihydroxyvitamin D, 25(OH)D, 25-Hydroxyvitamin D, HIV, Humanes Immundefizienz-Virus, SARS, COVID-19, Schweres Akutes Respiratorisches Syndrom, TB, Tuberkulose, MTB, Mycobacterium tuberculosis, Grippe]
