--- a/_studies/2021-06-25_10.3390_antiox10071031.md
+++ b/_studies/2021-06-25_10.3390_antiox10071031.md
@@ -5,7 +5,7 @@ date:        2021-06-25
 title:       Antioxidants
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Lima, LW, Nardi, S, Santoro, V et al.'
+authors:      'Lima, LW, Nardi, S, Santoro, V, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 status:   default
 ##
