--- a/_studies/2021-07-30_10.1007_s00203-021-02482-5.md
+++ b/_studies/2021-07-30_10.1007_s00203-021-02482-5.md
@@ -1,7 +1,7 @@
 ---
 date:        2021-07-30
 title:       Archives of Microbiology
-authors:      'Matin, S. Fouladi, N, Pahlevan, Y, et al.'
+authors:      'Matin, S, Fouladi, N, Pahlevan, Y, et al.'
 status:     default
 en:
   subtitle:    'The sufficient vitamin D and albumin level have a protective effect on COVID-19 infection'
