--- a/_studies/2021-08-04_10.1016_j.jbmt.2021.07.012.md
+++ b/_studies/2021-08-04_10.1016_j.jbmt.2021.07.012.md
@@ -5,7 +5,7 @@ date:        2021-08-04
 title:       Journal of Bodywork and Movement Therapies
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Mohamed, AA. Alawna, M'
+authors:      'Mohamed, AA, Alawna, M'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 en:
