--- a/_studies/2021-09-08_10.1016_j.bone.2021.116175.md
+++ b/_studies/2021-09-08_10.1016_j.bone.2021.116175.md
@@ -12,5 +12,5 @@ de:
   description: 'Die systemische Erkrankung im Zusammenhang mit der SARS-CoV-2-Infektion führt zu einer Hospitalisierungsrate von 380,3 Hospitalisierungen pro 100.000 Einwohner und überfordert die Gesundheitssysteme. Vitamin D reguliert die Expression von etwa 11.000 Genen, die viele physiologische Funktionen umfassen, darunter die Regulierung der angeborenen und adaptiven Immunfunktion. Wir untersuchen den potenziellen Nutzen einer Calcitriol-Therapie bei Patienten, die mit COVID-19 hospitalisiert wurden. Es handelte sich um eine offene, randomisierte klinische Studie, in der erwachsene Patienten mit COVID-19 im Krankenhaus mit Calcitriol oder ohne Behandlung behandelt wurden. Die Probanden wurden nach dem Zufallsprinzip einer Behandlung mit Calcitriol 0,5 μg täglich für 14 Tage oder der Entlassung aus dem Krankenhaus oder keiner Behandlung (1:1) zum Zeitpunkt der Einschreibung zugewiesen. Es wurden 50 konsekutive Patienten eingeschlossen, 25 pro Studienarm. Die Veränderung der peripheren arteriellen Sauerstoffsättigung im Verhältnis zur eingeatmeten Sauerstofffraktion (SaO2/FIO2-Verhältnis) wurde bei Aufnahme und Entlassung zwischen den Gruppen berechnet. Die Kontrollgruppe wies bei der Entlassung einen durchschnittlichen Anstieg von +13,2 (±127,7) auf, während die Calcitriol-Gruppe einen Anstieg von +91,04 (±119,08) verzeichnete, was auf eine Verbesserung der Sauerstoffsättigung bei den Patienten, die Calcitriol erhielten, hindeutet. Außerdem benötigten 12 Patienten in der Kontrollgruppe bei der Aufnahme eine Sauerstoffergänzung, und 21 von ihnen wurden mit Raumluft entlassen. In der Calcitriol-Gruppe benötigten 14 Patienten bei der Aufnahme eine Sauerstoffergänzung, während alle 25 mit Raumluft entlassen wurden. Andere klinische Marker zeigten, dass die durchschnittliche Aufenthaltsdauer in der Kontrollgruppe 9,24 (±9,4) Tage betrug, während sie in der Calcitriol-Gruppe 5,5 (±3,9) Tage betrug. In der Kontrollgruppe mussten 8 Patienten auf die Intensivstation verlegt werden, in der Calcitriol-Gruppe waren es 5. In der Kontrollgruppe gab es 3 Todesfälle und 4 Wiedereinweisungen, in der Calcitriol-Gruppe 0 Todesfälle und 2 Wiedereinweisungen. Diese Pilotstudie zeigt eine Verbesserung der Oxygenierung bei hospitalisierten Patienten mit COVID-19, die mit Calcitriol behandelt wurden, und legt die Notwendigkeit einer größeren randomisierten Studie nahe.'
   tags:     [COVID-19, Calcitriol, Endokrin, Therapie, Vitamin D]
 group:  "Treatments"
-credit:      https://doi.org/j.bone.2021.116175
+credit:      https://doi.org/10.1016/j.bone.2021.116175
 ---
