--- a/_studies/2021-09-08_10.3390_diagnostics11091645.md
+++ b/_studies/2021-09-08_10.3390_diagnostics11091645.md
@@ -2,7 +2,7 @@
 date:        2021-09-08
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Diagnostics (Basel, Switzerland) 
+title:       Diagnostics
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Cruciani, M, Pati, I, Masiello, F, et al.'
