--- a/_studies/2021-09-28_10.3389_fpubh.2021.729559.md
+++ b/_studies/2021-09-28_10.3389_fpubh.2021.729559.md
@@ -31,7 +31,7 @@ de:
 group:       "Treatments"
 ## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
 ##
-credit:     https://doi.org/10.3389/fpubh.2021.729559
+credit:     https://www.frontiersin.org/articles/10.3389/fpubh.2021.729559/full
 ## Link zur Studien-Website.
 ##
 ## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
