--- a/_studies/2021-10-04_10.1016_j.jiph.2021.09.022.md
+++ b/_studies/2021-10-04_10.1016_j.jiph.2021.09.022.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Mögliche Vorteile einer Zinkergänzung bei CVD und COVID-19-Komorbidität'
+  subtitle:    'Mögliche Vorteile der Einnahme von Zink bei kardiovaskulären Erkrankungen und COVID-19-Komorbidität'
   ##
   description: 'Was die Komorbidität betrifft, so scheinen kardiovaskuläre Erkrankungen (CVD) für die höchste Prävalenz, den höchsten Schweregrad und die höchste Sterblichkeit bei COVID-19-Patienten verantwortlich zu sein. Eine Vielzahl von Kausalzusammenhängen zwischen CVD und COVID-19 gibt Rätsel auf, sowohl was die Gesamtprognose als auch die Wirksamkeit der jeweiligen therapeutischen Maßnahmen betrifft. Im Mittelpunkt dieses Rätsels steht ACE2, das als Rezeptor für SARS-CoV-2 fungiert und dessen funktionelle Expression auch erforderlich ist, um die Gefäßverengung zu minimieren, die andernfalls zu hohem Blutdruck führen würde. Außerdem scheint die SARS-CoV-2-Infektion die funktionelle Expression von ACE2 zu verringern. In Anbetracht dieser Umstände könnte es ratsam sein, einen Behandlungsplan für COVID-19-Patienten mit CVD in Erwägung zu ziehen, der weder den vasodeleteren Arm des Renin-Angiotensinogen-Aldosteron-Systems (RAAS) negativ beeinflusst, noch den vasoprotektiven Arm des RAAS beeinträchtigt, sondern die virale Replikation wirksam minimiert oder, sofern möglich, hemmt. In Anbetracht der immunmodulierenden Rolle von Zn bei der Pathogenese von CVD und COVID-19 könnte eine Zinkergänzung des selektiven Behandlungsplans für CVD und COVID-19-Komorbiditäten, die von den Klinikern in Abhängigkeit von den kardiovaskulären Bedingungen der Patienten zu entscheiden ist, das therapeutische Ergebnis erheblich verbessern. ACE2 ist ein Zink-Metalloenzym, und es ist bekannt, dass Zink auch die Virusreplikation hemmt.'
   tags: [Zink, Angiotensin-konvertierendes Enzym, CVD und COVID 19 Komorbidität, Bluthochdruck, Vasokonstriktion, SARS-CoV-2]
