--- a/_studies/2021-10-06_10.7573_dic.2021-6-2.md
+++ b/_studies/2021-10-06_10.7573_dic.2021-6-2.md
@@ -1,7 +1,7 @@
 ---
 date:        2021-10-06
 title:       Drugs in Context 
-authors:      'Speakman, L, Michienzi. S, Badowski, M'
+authors:      'Speakman, L, Michienzi, S, Badowski, M'
 status:         default
 en:
   subtitle:    'Vitamins, supplements and COVID-19: a review of currently available evidence'
