--- a/_studies/2021-10-18_10.18502_acta.v59i11.7779.md
+++ b/_studies/2021-10-18_10.18502_acta.v59i11.7779.md
@@ -33,7 +33,7 @@ de:
 group:       "Treatments"
 ## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
 ##
-credit:      	https://doi.org/10.18502/acta.v59i11.7779
+credit:      	https://acta.tums.ac.ir/index.php/acta/article/view/9507
 ## Link zur Studien-Website.
 ##
 ## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
