--- a/_studies/2021-10-25_10.3390_ijms222111483.md
+++ b/_studies/2021-10-25_10.3390_ijms222111483.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'ACE2 und angeborene Immunität bei der Regulierung von SARS-CoV-2-induzierten akuten Lungenverletzungen: Ein Überblick'
+  subtitle:    'ACE2 und angeborene Immunität bei der Regulierung von SARS-CoV-2-induzierten akuten Lungenschädigungen: Ein Überblick'
   ##
   description: 'Trotz des langwierigen Kampfes gegen die akute Atemwegsinfektion durch Coronaviren (COVID-19) und der rasanten Entwicklung des schweren akuten respiratorischen Syndroms Coronavirus 2 (SARS-CoV-2) gibt es bisher keine spezifischen und wirksamen Medikamente. Das Angiotensin-konvertierende Enzym 2 (ACE2) ist eine Zinkmetalloproteinase und ein wichtiger Modulator des Renin-Angiotensin-Systems (RAS). Darüber hinaus hat ACE2 eine entzündungshemmende und antifibrotische Funktion. ACE ist in den letzten zehn Jahren weithin bekannt geworden, da es als primärer Rezeptor für SARS-CoV und SARS-CoV-2 identifiziert wurde und eng mit deren Infektion verbunden ist. SARS-CoV-2 befällt in erster Linie die Lunge und löst durch die Infektion von Alveolarzellen einen Zytokinsturm aus, der zu Gewebeschäden und schließlich zu einem schweren akuten respiratorischen Syndrom führt. In der Lunge fungiert die angeborene Immunität als entscheidende Verteidigungslinie gegen Krankheitserreger, einschließlich SARS-CoV-2. In dieser Übersichtsarbeit soll die Regulierung von ACE2 zusammengefasst werden, und die Wirtszellen der Lunge widerstehen der Invasion von SARS-CoV-2 durch die Aktivierung der angeborenen Immunität. Schließlich erörtern wir ACE2 als therapeutisches Ziel, das Hinweise und Erkenntnisse für die klinische Behandlung von COVID-19 liefert.'
   tags: [ACE2, Immunzellen, COVID-19, SARS-CoV-2, ALI]
