--- a/_studies/2021-10-29_0.1186_s43088-021-00163-2.md
+++ b/_studies/2021-10-29_0.1186_s43088-021-00163-2.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen der COVID-19-Pandemie'
+  subtitle:    'Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung der COVID-19-Pandemie'
   ##
   description: 'Die Coronavirus-Pandemie 2019 (COVID-19) ist eine Viruserkrankung, die eine Atemwegserkrankung verursacht und im Dezember 2019 in China begann. Mehrere Vitamine und Spurenelemente könnten zur Stärkung der Immunität des Wirts beitragen, indem sie antioxidativ oder entzündungshemmend wirken. Ziel dieser Arbeit war es, die Rolle verschiedener Nährstoffe, Vitamine und Spurenelemente auf den Immunitätsstatus der infizierten Person zu ermitteln und die Möglichkeit einer positiven Rolle dieser Elemente bei der Behandlung von COVID-19 zu prüfen. Nach dem Sammeln (PubMed, Scholar, OVID, Embase, Cochrane Library) und der Untersuchung veröffentlichter Artikel, in denen die Wirkung dieser Elemente auf die Virusinfektion getestet wurde, wurde festgestellt, dass die meisten dieser Elemente während der Virusinfektion über verschiedene Mechanismen eine wichtige Rolle spielen, z. B. antioxidativ, entzündungshemmend und immunmodulatorisch. Ernährungsspezifische Maßnahmen bei COVID-19-Infektionen sind derzeit sehr wichtig, und es wurde berichtet, dass Vitamin C und D das Risiko akuter Atemwegsinfektionen verringern. Darüber hinaus beeinträchtigt eine Vitamin-A-arme Ernährung die Wirksamkeit von inaktivierten Impfstoffen gegen Rindercoronaviren. Die Verabreichung von N-Acetylcystein zeigte eine positive hemmende Wirkung bei Virusinfektionen und erhöhte die Glutathionproduktion. Der Selenmangel bei den COVID-19-Teilnehmern hat einen erheblichen Einfluss auf das klinische Ergebnis der Teilnehmer. Darüber hinaus hat sich gezeigt, dass eine Supplementierung mit Vitaminen die Immunantwort während einer Virusinfektion verbessert. Vitamine und Spurenelemente zeigten nicht nur eine positive Wirkung, sondern auch Omega-3-Fettsäuren zeigten eine immunmodulierende Wirkung während der Infektion. Die Bestimmung des Gehalts an diesen Spurenelementen zu Beginn der Studie und die Verabreichung von Nahrungsergänzungsmitteln mit verschiedenen Vitaminen und Spurenelementen könnte im Fall von COVID-19 zu einer besseren Kontrolle und besseren klinischen Ergebnissen führen.'
   tags: [COVID-19, Coronavirus, Ernährung, Vitamine, Immunität, Spurenelemente]
