--- a/_studies/2021-11-16_10.3390_ijerph182212001.md
+++ b/_studies/2021-11-16_10.3390_ijerph182212001.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Die Rolle von pflanzlichen und ernährungswissenschaftlichen Behandlungen im Kampf gegen COVID-19 und andere Atemwegsinfektionen'
+  subtitle:    'Die Rolle pflanzlicher und ernährungsphysiologischer Behandlungen im Kampf gegen COVID-19 und andere Atemwegsinfektionen'
   ##
   description: 'Mit der zunehmenden Verbreitung von COVID-19 weltweit hat sich die Attraktivität von alternativen und ernährungswissenschaftlichen Therapien in Verbindung mit medizinischen Therapien erhöht. In diesem Artikel werden Studien zur Bewertung der Rolle der traditionellen chinesischen Medizin und Ernährung bei Infektionen der oberen Atemwege, einschließlich COVID-19, zusammengefasst. Verschiedene chinesische Kräuterprotokolle haben sich bei der Bekämpfung von Atemwegsinfektionen bewährt, wobei mehrere davon an dem neuen Coronavirus getestet wurden. Darüber hinaus wurden vielversprechende Ergebnisse gemeldet, wenn medizinische Behandlungen durch Ernährungsmaßnahmen ergänzt wurden. Diskutiert wird die Supplementierung mit den Vitaminen C und D, Zink und Selen sowie mit bestimmten sekundären Pflanzenstoffen und Lebensmitteln, die ebenfalls immunregulierende und antivirale Eigenschaften besitzen. Weitere klinische Studien sind erforderlich, um diese alternativen Behandlungen als Teil der Behandlung neu auftretender Atemwegsinfektionen zu etablieren.'
   tags: [Coronavirus, COVID-19, Atemwegsinfektionen, Chinesische Kräutermedizin, Ernährung, Mikronährstoffe]
