--- a/_studies/2021-11-18_10.3389_fphar.2021.704205.md
+++ b/_studies/2021-11-18_10.3389_fphar.2021.704205.md
@@ -24,7 +24,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Die klinischen Studien zum Repurposing von Arzneimitteln für COVID-19 liefern sehr wirksame therapeutische Kombinationen: Lehren aus großen klinischen Studien'
+  subtitle:    'Die klinischen Studien zur Umwidmung von Arzneimitteln für COVID-19 liefern sehr wirksame therapeutische Kombinationen: Lehren aus großen klinischen Studien'
 ##
   description: 'SARS-CoV-2 hat sich in kürzester Zeit über den gesamten Globus ausgebreitet. Anfangs litten die Menschen darunter, dass es keine wirksamen Medikamente zur Behandlung der schwer erkrankten Patienten gab. Dennoch gibt es immer noch keine etablierten therapeutischen Moleküle gegen SARS-CoV-2. Daher wurde mit der Umwidmung von Medikamenten gegen SARS-CoV-2 begonnen, wodurch mehrere Medikamente für die Behandlung von COVID-19-Patienten zugelassen wurden. In diesem Beitrag wird die Behandlung von COVID-19 durch die Umwidmung von Medikamenten seit dem 8. Dezember 2019 (dem Tag, an dem die WHO COVID-19 als Pandemie anerkannte) bis heute untersucht. Wir haben alle klinischen Studien aus den RECOVERY-Studien, der ACTT-1- und ACTT-2-Studiengruppe und anderen wichtigen klinischen Studienplattformen geprüft, die in renommierten Fachzeitschriften wie NEJM, Lancet usw. veröffentlicht wurden. Neben der Einzelmolekültherapie wurden auch mehrere Kombinationstherapien bewertet, um die Behandlung von COVID-19 aus diesen bedeutenden klinischen Studien zu verstehen. Bis heute wurden mehrere Lehren aus den therapeutischen Ergebnissen für COVID-19 gezogen. In dem Beitrag werden auch die Erfahrungen beschrieben, die beim Repurposing therapeutischer Moleküle (Hydroxychloroquin, Ritonavir/Lopinavir, Favipiravir, Remdesivir, Ivermectin, Dexamethason, Camostatmesylat und Heparin), immuntherapeutischer Moleküle (Tocilizumab, Mavrilimumab, Baricitinib und Interferone), der Kombinationstherapie und der Therapie mit rekonvaleszentem Plasma zur Behandlung von COVID-19-Patienten gemacht wurden. Wir fassen zusammen, dass die antivirale Therapie (Remdesivir) und die immuntherapeutische Therapie (Tocilizumab, Dexamethason und Baricitinib) einige positive Ergebnisse zeigten. Bis März 2021 wurden 4952 klinische Studien zur Entwicklung von Medikamenten und Impfstoffen für COVID-19 bei ClinicalTrials.gov registriert. Mehr als 100 Länder haben zu diesen klinischen Studien beigetragen. Neben den registrierten (mittelgroßen bis großen) klinischen Studien wurden von Zeit zu Zeit auch mehrere kleinere klinische Studien durchgeführt, um die Behandlung von COVID-19 zu untersuchen. Vier Moleküle erwiesen sich als vorteilhaft für die Behandlung von COVID-19-Patienten. Die kurzfristige Umwidmung eines bestehenden Medikaments könnte für COVID-19-Patienten ein erfolgreiches Ergebnis bringen. Daher können weitere klinische Studien mit potenziellen antiviralen Molekülen eingeleitet werden, indem sie in verschiedenen Phasen der klinischen Studien bewertet werden.'
   tags:     [COVID-19, klinische Studien, Repurposing von Medikamenten, zukünftige Pandemien, Erfahrung in der Behandlung]
