--- a/_studies/2021-11-25_10.7759_cureus.19902.md
+++ b/_studies/2021-11-25_10.7759_cureus.19902.md
@@ -24,7 +24,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Therapien zur Verhinderung des Fortschreitens von COVID-19, einschließlich Hydroxychloroquin, Azithromycin, Zink und Vitamin D3 mit oder ohne intravenöses Vitamin C: Eine internationale, multizentrische, randomisierte Studie'
+  subtitle:    'Therapien zur Verhinderung des Fortschreitens von COVID-19, einschließlich Hydroxychloroquin, Azithromycin, Zink und Vitamin D3 mit oder ohne Vitamin C intravenös: Eine internationale, multizentrische, randomisierte Studie'
 ##
   description: 'COVID-19 ist eine globale Pandemie. Die Behandlung mit Hydroxychloroquin (HCQ), Zink und Azithromycin (AZM), auch bekannt als Zelenko-Protokoll, und die Behandlung mit intravenösem Vitamin C (IVC) haben in einer Vielzahl von Studien weltweit ermutigende Ergebnisse gezeigt. Darüber hinaus ist der Vitamin-D-Spiegel ein wichtiger Indikator für den Schweregrad der Symptome bei Patienten mit COVID-19. Ziel unserer multizentrischen, randomisierten, offenen Studie war es, die Wirksamkeit von HCQ, AZM und Zink mit oder ohne IVC bei hospitalisierten Patienten mit COVID-19 im Hinblick auf die Verringerung der Schwere und Dauer der Symptome und die Verhinderung des Todes zu untersuchen. Krankenhauspatienten mit COVID-19 in sieben teilnehmenden Krankenhäusern in der Türkei wurden auf ihre Eignung geprüft und nach dem Zufallsprinzip entweder HCQ, AZM und Zink (Gruppe 1) oder HCQ, AZM, Zink plus IV-Vitamin C (Gruppe 2) für 14 Tage zugewiesen. Die Patienten erhielten außerdem Vitamin D3 in nicht-therapeutischen Mengen. Insgesamt wurden 237 hospitalisierte Patienten mit COVID-19 im Alter von 22 bis 99 Jahren (Mittelwert: 63,3 ± 15,7 Jahre) in die Studie aufgenommen. Fast alle Patienten wiesen einen Vitamin-D-Mangel auf (97 %), 55 % einen schweren Vitamin-D-Mangel (<25 nmol/L) und 42 % einen Vitamin-D-Mangel (<50 nmol/L); 3 % hatten einen unzureichenden Vitamin-D-Spiegel (<75 nmol/L), und keiner hatte einen optimalen Vitamin-D-Spiegel. Von den Patienten hatten 73 % Begleiterkrankungen, darunter Diabetes (35 %), Herzerkrankungen (36 %) und Lungenerkrankungen (34 %). Bis auf einen Patienten (99,6 %; n = 236/237), der mit HCQ, AZM und Zink mit oder ohne hochdosiertes IV-Vitamin C (IVC) behandelt wurde, erholten sich alle vollständig. Die zusätzliche IVC-Therapie trug wesentlich zu einer schnelleren Genesung bei (15 Tage gegenüber 45 Tagen bis zur Entlassung). Nebenwirkungen wie Durchfall, Übelkeit und Erbrechen, die von 15 % bis 27 % der Patienten angegeben wurden, waren leicht bis mittelschwer und vorübergehend. Es wurden keine kardialen Nebenwirkungen beobachtet. Niedrige Vitamin-D-Spiegel korrelierten signifikant mit einer höheren Wahrscheinlichkeit der Aufnahme auf die Intensivstation und einem längeren Krankenhausaufenthalt. Leider verstarb eine 70-jährige Patientin mit einer Herz- und Lungenerkrankung nach 17 Tagen auf der Intensivstation und 22 Tagen im Krankenhaus. Ihr Vitamin-D-Spiegel lag bei der Aufnahme bei 6 nmol/L (d. h. ein schwerer Mangel). Unsere Studie deutet darauf hin, dass das Behandlungsprotokoll aus HCQ, AZM und Zink mit oder ohne Vitamin C bei der Behandlung von COVID-19 sicher und wirksam ist, wobei hochdosiertes IV-Vitamin C zu einer deutlich schnelleren Genesung führt. Wichtig ist, dass unsere Studie bestätigt, dass Vitamin-D-Mangel ein Hochrisikofaktor für eine schwere COVID-19-Erkrankung und einen Krankenhausaufenthalt ist: 97 % der Patienten unserer Studie hatten einen Vitamin-D-Mangel, 55 % davon einen schweren Vitamin-D-Mangel, und keiner hatte optimale Werte. Zukünftige Studien sind gerechtfertigt, um die Behandlung mit einer Kombination aus hochdosiertem Vitamin D3 zusätzlich zu HCQ, AZM und Zink sowie hochdosiertem intravenösem Vitamin C zu untersuchen.'
 ##
