--- a/_studies/2021-11-26_10.6061_clinics_2021_e3549.md
+++ b/_studies/2021-11-26_10.6061_clinics_2021_e3549.md
@@ -33,7 +33,7 @@ de:
 group:       "Treatments"
 ## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
 ##
-credit:      https://doi.org/10.6061/clinics/2021/e3549
+credit:      https://www.clinicsjournal.com/article/effect-of-a-single-high-dose-vitamin-d3-on-the-length-of-hospital-stay-of-severely-25-hydroxyvitamin-d-deficient-patients-with-covid-19/
 ## Link zur Studien-Website.
 ##
 ##
