--- a/_studies/2021-12-03_10.3390_cancers13236094.md
+++ b/_studies/2021-12-03_10.3390_cancers13236094.md
@@ -2,7 +2,7 @@
 date:        2021-12-03
 ## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
 ##
-title:       Cancers (Basel)
+title:       Cancers
 ## Titel der Publikation, beispielweise The Lancet.
 ##
 authors:      'Bader-Larsen, KS, Larson, EA, Dalamaga, M, et al.'
