--- a/_studies/2021-12-04_10.22092_ARI.2021.356807.1914.md
+++ b/_studies/2021-12-04_10.22092_ARI.2021.356807.1914.md
@@ -33,7 +33,7 @@ de:
 group:       "Treatments"
 ## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
 ##
-credit:   https://doi-org/10.22092/ARI.2021.356807.1914  
+credit:   https://doi.org/10.22092/ARI.2021.356807.1914  
 ## Link zur Studien-Website.
 ##
 ##
