--- a/_studies/2021-12-22_10.3389_fmolb.2021.632290.md
+++ b/_studies/2021-12-22_10.3389_fmolb.2021.632290.md
@@ -32,5 +32,5 @@ de:
 group: "Treatments"
 ## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
 ##
-credit: https://doi.org/10.3389/fmolb.2021.632290
+credit: https://www.frontiersin.org/articles/10.3389/fpubh.2021.736665/full
 ---
