--- a/_studies/2021-06-24_10.3390_nu13072170.md
+++ b/_studies/2021-06-24_10.3390_nu13072170.md
@@ -5,7 +5,7 @@ date:        2021-06-24
 title:       Nutrients
 ## Titel der Publikation, beispielweise The Lancet.
 ##
-authors:      'Sabico, S, Enani, MA,. Sheshah, E, et al.'
+authors:      'Sabico, S, Enani, MA, Sheshah, E, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 status: default
 ##
