--- a/_studies/2021-08-03_10.1016_j.exger.2021.111507.md
+++ b/_studies/2021-08-03_10.1016_j.exger.2021.111507.md
@@ -20,7 +20,7 @@ en:
 de: 
 ## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
 ##
-  subtitle:    'Alterung und COVID-19-Anfälligkeit, Schwere der Erkrankung und klinische Ergebnisse: Die Rolle verschränkter Risikofaktoren'
+  subtitle:    'Alterung und COVID-19-Anfälligkeit, Schwere der Erkrankung und klinische Ergebnisse: Die Rolle des Zusammenwirkens verschiedener Risikofaktoren'
   ##
   description: 'Das Auftreten des Schweren Akuten Respiratorischen Syndroms Corona Virus 2 (SARS-CoV-2) Ende 2019 war mit einer hohen Mortalitäts- und Morbiditätsrate verbunden. Es wurde festgestellt, dass die ältere Bevölkerung nicht nur ein erhöhtes Risiko hat, an einer COVID-19-Infektion zu erkranken, sondern dass auch atypische Präsentationen, schwere Formen der Erkrankung und Mortalität in dieser Bevölkerungsgruppe häufiger auftreten. Eine Vielzahl von Mechanismen und Risikofaktoren tragen zum höheren Infektionsrisiko in der älteren Bevölkerung bei. So wird beispielsweise das Altern mit einer erhöhten Expression von Angiotensin-Converting Enzyme-2 (ACE-2), dem Rezeptor für das SARS-CoV-2-Spike-Protein, in Verbindung gebracht, was die Replikation des Virus in der alten Bevölkerung beschleunigt. Andererseits können eine Dysregulation des Immunsystems und Veränderungen der Darmmikrobiota als Folge des Alterns zum Zytokinsturm beitragen, einem der Hauptindikatoren für die Schwere der Erkrankung. Der Rückgang der Sexualsteroide, insbesondere bei Frauen, sowie des Wachstumshormons, die beide eine entscheidende Rolle bei der Immunregulation spielen, trägt wesentlich zur Schwere der Erkrankung im Alter bei. Seneszenz-assoziierter oxidativer Stress und mitochondriale Dysfunktion sowohl in Pneumozyten als auch in Immunzellen tragen auf exazerbative Weise zur Schwere der Infektion bei. Darüber hinaus sind lebensstilbedingte Faktoren wie Ernährung und körperliche Aktivität, die im Alter beeinträchtigt sind, als wichtige Faktoren für eine COVID-19-Infektion bekannt. Altersbedingte Komorbiditäten, insbesondere Herz-Kreislauf-Erkrankungen und Diabetes mellitus, setzen ältere Erwachsene ebenfalls einem erhöhten Risiko für Komplikationen und die Schwere der Erkrankung aus.'
   tags: [ältere Erwachsene, SARS-CoV-2, ARDS, Sterblichkeit]
