--- a/_studies/2021-08-03_10.1016_j.nmni.2021.100924.md
+++ b/_studies/2021-08-03_10.1016_j.nmni.2021.100924.md
@@ -1,43 +1,17 @@
 ---
 date:        2021-08-03
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
-title:       New Microbes and new Infections 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors:      'Santin, AD, Scheim, DE, McCullough, PA, et a.'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-##
-status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
-##
+title:       New Microbes and New Infections
+authors:     'Santin, AD, Scheim, E, McCullough, PA, et al.'
+status:     default
 en:
-  subtitle:    'Ivermectin: a multifaceted drug of Nobel prize-honoured distinction with indicated efficacy against a new global scourge, COVID-19'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
-  description: 'In 2015, the Nobel Committee for Physiology or Medicine, in its only award for treatments of infectious diseases since six decades prior, honoured the discovery of ivermectin (IVM), a multifaceted drug deployed against some of the world’s most devastating tropical diseases. Since March 2020, when IVM was first used against a new global scourge, COVID-19, more than 20 randomized clinical trials (RCTs) have tracked such inpatient and outpatient treatments. Six of seven meta-analyses of IVM treatment RCTs reporting in 2021 found notable reductions in COVID-19 fatalities, with a mean 31% relative risk of mortality vs. controls. During mass IVM treatments in Peru, excess deaths fell by a mean of 74% over 30 days in its ten states with the most extensive treatments. Reductions in deaths correlated with the extent of IVM distributions in all 25 states. Sharp reductions in morbidity using IVM were also observed in two animal models, of SARS-CoV-2 and a related betacoronavirus. The indicated biological mechanism of IVM, competitive binding with SARS-CoV-2 spike protein, is likely non-epitope specific, possibly yielding full efficacy against emerging viral mutant strains.'
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
-  tags:     [COVID-19, H. pylori, SARS-CoV-2, ivermectin, spike protein]
-  ## Keywords bitte mit Kommata trennen.
-  ##
+  subtitle:  'Ivermectin: a multifaceted drug of Nobel prize-honoured distinction with indicated efficacy against a new global scourge, COVID-19'
+  description: 'In 2015, the Nobel Committee for Physiology or Medicine, in its only award for treatments of infectious diseases since six decades prior, honoured the discovery of ivermectin (IVM), a multifaceted drug deployed against some of the world’s most devastating tropical diseases. Since March 2020, when IVM was first used against a new global scourge, COVID-19, more than 20 randomized clinical trials (RCTs) have tracked such inpatient and outpatient treatments. Six of seven meta-analyses of IVM treatment RCTs reporting in 2021 found notable reductions in COVID-19 fatalities, with a mean 31% relative risk of mortality vs. controls. During mass IVM treatments in Peru, excess deaths fell by a mean of 74% over 30 days in its ten states with the most extensive treatments. Reductions in deaths correlated with the extent of IVM distributions in all 25 states with p < 0.002. Sharp reductions in morbidity using IVM were also observed in two animal models, of SARS-CoV-2 and a related betacoronavirus. The indicated biological mechanism of IVM, competitive binding with SARS-CoV-2 spike protein, is likely non-epitope specific, possibly yielding full efficacy against emerging viral mutant strains.'
+  tags: [COVID-19, H. pylori, ivermectin, SARS-CoV-2, spike protein]
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'Ivermectin: ein vielseitiges, mit dem Nobelpreis ausgezeichnetes Medikament mit nachgewiesener Wirksamkeit gegen eine neue globale Geißel, COVID-19'
-##
-  description: 'Im Jahr 2015 würdigte das Nobelkomitee für Physiologie oder Medizin mit seiner einzigen Auszeichnung für die Behandlung von Infektionskrankheiten seit sechs Jahrzehnten die Entdeckung von Ivermectin (IVM), einem vielseitigen Medikament, das gegen einige der verheerendsten Tropenkrankheiten der Welt eingesetzt wird. Seit März 2020, als IVM erstmals gegen eine neue globale Geißel, COVID-19, eingesetzt wurde, haben mehr als 20 randomisierte klinische Studien (RCTs) solche stationären und ambulanten Behandlungen verfolgt. Sechs von sieben Meta-Analysen der RCTs zur IVM-Behandlung, die 2021 veröffentlicht wurden, ergaben eine bemerkenswerte Verringerung der COVID-19-Todesfälle, mit einem durchschnittlichen relativen Sterberisiko von 31 % im Vergleich zur Kontrollgruppe. Während der massiven IVM-Behandlungen in Peru gingen die überzähligen Todesfälle in den zehn Bundesstaaten mit den umfangreichsten Behandlungen innerhalb von 30 Tagen um durchschnittlich 74 % zurück. Der Rückgang der Todesfälle korrelierte mit dem Ausmaß der IVM-Verteilung in allen 25 Bundesstaaten. Ein deutlicher Rückgang der Morbidität durch IVM wurde auch in zwei Tiermodellen beobachtet, und zwar bei SARS-CoV-2 und einem verwandten Betacoronavirus. Der angedeutete biologische Mechanismus von IVM, die kompetitive Bindung an das SARS-CoV-2-Spike-Protein, ist wahrscheinlich nicht epitopspezifisch, was möglicherweise zu einer vollständigen Wirksamkeit gegen neu auftretende virale Mutantenstämme führt.'
-  tags:     [COVID-19, H. pylori, SARS-CoV-2, Ivermectin, Spike-Protein]
+  description: 'Im Jahr 2015 würdigte das Nobelkomitee für Physiologie oder Medizin mit seinem einzigen Preis für die Behandlung von Infektionskrankheiten seit sechs Jahrzehnten die Entdeckung von Ivermectin (IVM), einem vielseitigen Medikament, das gegen einige der verheerendsten Tropenkrankheiten der Welt eingesetzt wird. Seit März 2020, als IVM erstmals gegen eine neue globale Geißel, COVID-19, eingesetzt wurde, haben mehr als 20 randomisierte klinische Studien (RCTs) solche stationären und ambulanten Behandlungen verfolgt. Sechs von sieben Meta-Analysen der RCTs zur IVM-Behandlung, die 2021 veröffentlicht wurden, ergaben eine bemerkenswerte Verringerung der COVID-19-Todesfälle, mit einem durchschnittlichen relativen Sterberisiko von 31 % im Vergleich zu den Kontrollen. Während der massiven IVM-Behandlungen in Peru gingen die überzähligen Todesfälle in den zehn Bundesstaaten mit den umfangreichsten Behandlungen innerhalb von 30 Tagen um durchschnittlich 74 % zurück. Der Rückgang der Todesfälle korrelierte mit dem Ausmaß der IVM-Verteilung in allen 25 Bundesstaaten mit p < 0,002. Ein deutlicher Rückgang der Morbidität durch IVM wurde auch in zwei Tiermodellen beobachtet, und zwar bei SARS-CoV-2 und einem verwandten Betacoronavirus. Der angegebene biologische Mechanismus von IVM, die kompetitive Bindung an das SARS-CoV-2-Spike-Protein, ist wahrscheinlich nicht epitopspezifisch, was möglicherweise zu einer vollständigen Wirksamkeit gegen neu auftretende virale Mutantenstämme führt.'
+  tags: [COVID-19, H. pylori, Ivermectin, SARS-CoV-2, Spike-Protein]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
-credit:      https://doi.org/10.1016/j.nmni.2021.100924
-## Link zur Studien-Website.
-##
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
+credit:     https://doi.org/10.1016/j.nmni.2021.100924
 ---
 <object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
