--- a/_studies/2021-10-08_10.5603_CJ.a2021.0122.md
+++ b/_studies/2021-10-08_10.5603_CJ.a2021.0122.md
@@ -8,7 +8,7 @@ en:
   description: 'Vitamin D is a likely candidate for treatment as its immune modulating characteristics have effects on coronavirus disease 2019 (COVID-19) patients. It was  sought herein, to summarize the studies published to date regarding the vitamin D supplementation to treat severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) positive patients.'
   tags: [COVID-19, SARS-CoV-2, vitamin D, calciferol, systematic review, meta-analysis]
 de: 
-  subtitle:    'Vitamin-D-Supplementierung zur Behandlung von SARS-CoV-2-positiven Patienten. Beweise aus Meta-Analyse'
+  subtitle:    'Vitamin-D-Supplementierung zur Behandlung von SARS-CoV-2-positiven Patienten. Evidenz aus einer Meta-Analyse'
   description: 'Vitamin D ist ein wahrscheinlicher Kandidat für eine Behandlung, da seine immunmodulierenden Eigenschaften Auswirkungen auf Patienten mit der Coronavirus-Krankheit 2019 (COVID-19) haben. Es wurde versucht, die bisher veröffentlichten Studien über die Vitamin-D-Supplementierung zur Behandlung von Patienten mit schwerem akuten respiratorischen Syndrom und Coronavirus 2 (SARS-CoV-2) zusammenzufassen.'
   tags: [COVID-19, SARS-CoV-2, Vitamin D, Calciferol, systematische Überprüfung, Meta-Analyse]
 group:       "Treatments"
