--- a/_studies/2021-12-01_10.14336_AD.2021.0606.md
+++ b/_studies/2021-12-01_10.14336_AD.2021.0606.md
@@ -12,5 +12,5 @@ de:
   description: 'Die weltweit verhängten Abriegelungsmaßnahmen zur Eindämmung der COVID-19-Pandemie haben viele Aspekte des täglichen Lebens verändert, darunter auch die Ernährung und die körperliche Betätigung. Ziel dieser systematischen Übersichtsarbeit war es, Belege für Veränderungen in den Ernährungs- und Bewegungsgewohnheiten älterer Erwachsener aufgrund von COVID-19-bedingten Abriegelungen zu bewerten. Wir schlossen analytische Beobachtungsstudien ein, die über Veränderungen in der Ernährung, der körperlichen Aktivität oder beidem bei älteren Menschen (≥50 Jahre alt) berichteten. Wir durchsuchten PubMed und EBSCO LISTA, um Original-Forschungsartikel zu finden, die zwischen 01/2020-03/2021 veröffentlicht wurden. Wir fanden 27 Studien, von denen 5 über Veränderungen in der Ernährung, 17 über Veränderungen in der körperlichen Aktivität und 5 über Veränderungen in beiden Bereichen berichteten. Die Stichprobengrößen reichten von 17 bis 3110 Probanden. Sechs von 10 Studien zur Ernährung berichteten über keine signifikanten Veränderungen bei der Quantität oder Qualität des Lebensmittelkonsums; bei denjenigen, die Veränderungen bei der Ernährung feststellten, waren diese im Allgemeinen ungünstig. Dreizehn von 22 Studien zur körperlichen Aktivität berichteten über eine Abnahme der körperlichen Aktivität oder eine Zunahme der sitzenden Tätigkeit; die übrigen berichteten über keine wesentlichen Veränderungen. In einigen Studien waren die Gewohnheiten vor dem Einschluss ein Prädiktor für Veränderungen. Die Maßnahmen für mehr Sicherheit zu Hause haben die Ernährung älterer Erwachsener nicht wesentlich beeinflusst, aber zu einem deutlichen Rückgang ihrer körperlichen Aktivität geführt, wodurch sie einem höheren Risiko für nicht übertragbare Krankheiten ausgesetzt sind, was ihre Anfälligkeit für COVID-19 weiter erhöhen könnte. Letztendlich können diese Ergebnisse als Orientierungshilfe für die klinische Praxis dienen, indem sie zusätzliche Gesundheitsuntersuchungen für ältere Menschen durch Allgemeinmediziner fördern und die Notwendigkeit von Maßnahmen zur Lebensführung, wie z. B. Bewegungsinitiativen zu Hause, unterstreichen, um die negativen Auswirkungen der Pandemie auf diese besonders gefährdete Altersgruppe zu mildern.'
   tags:     [COVID-19, Lockdown, Ernährung, körperliche Aktivität, ältere Erwachsene]
 group:  "Treatments"
-credit:      https://doi.org/10.14336/AD.2021.0606
+credit:      http://www.aginganddisease.org/EN/10.14336/AD.2021.0606
 ---
