--- a/_studies/2021-12-30_10.5603_IMH.2021.0050.md
+++ b/_studies/2021-12-30_10.5603_IMH.2021.0050.md
@@ -12,5 +12,5 @@ de:
   description: 'Das primäre Ziel dieser Studie war es, herauszufinden, ob die Studenten der Gendarmerie Coast Guard Academy (GCGA) sich mit dem Coronavirus 2019 (COVID-19) angesteckt haben und ob sie die Pandemie durchlaufen haben, je nach dem Grad ihrer körperlichen Aktivität während des COVID-19-Prozesses. Die Untersuchungsgruppe der Studie bestand aus 332 freiwilligen männlichen Studenten, die an der GCGA studieren. Der Internationale Fragebogen zur körperlichen Aktivität (International Physical Activity Questionnaire-Short Form, IPAQ-SF) und der Fragebogen zur persönlichen Information wurden in der Studie als Datenerhebungsinstrumente verwendet. Nach den Body-Mass-Index-Werten der Schüler waren 73,49 % der Schüler normalgewichtig. Die Ergebnisse der Analyse zeigten, dass 29,82 % der GCGA-Schüler COVID-19 hatten, und 70,18 % von ihnen hatten kein COVID-19. Es wurde festgestellt, dass 91,92 % derjenigen, die COVID-19 hatten, leicht erkrankt waren und sich zu Hause erholten. Nach der metabolischen Äquivalenzklassifizierung der Studenten wurde ein negativer und signifikanter Zusammenhang zwischen dem Grad der körperlichen Aktivität der Studenten (inaktiv < minimal aktiv < sehr aktiv) und dem Risiko eines positiven Ergebnisses für COVID-19 (ja < nein) sowie dem Schweregrad von COVID-19 (auf der Intensivstation < im Krankenhaus < leicht zu Hause) festgestellt. Zu konstatieren wäre, dass eine Erhöhung des körperlichen Aktivitätsniveaus von Studenten die Möglichkeit, an COVID-19 zu erkranken, verringern und auch die Wahrscheinlichkeit einer leichten Erkrankung, die keinen Krankenhausaufenthalt erfordert, bei denjenigen mit einem positiven COVID-19-Testergebnis erhöhen kann.'
   tags:     [physical activity, catching COVID-19, overcome COVID-19]
 group:  "Treatments"
-credit:      https://doi.org/10.5603/IMH.2021.0050
+credit:      https://journals.viamedica.pl/international_maritime_health/article/view/85580
 ---
